@@ -3251,10 +3251,10 @@ BasedOn=XG Standard Kit
 Patch[*]=General MIDI
 Control=Standard
 
-;[General MIDI Drums]
-;Patch[*]=1..128
-;Key[*,*]=General MIDI Drums
-;Drum[*,*]=1
+[General MIDI Drums]
+Patch[*]=1..128
+Key[*,*]=General MIDI Drums
+Drum[*,*]=1
 
 [Roland GS]
 Control=Roland GS Controllers
@@ -3273,22 +3273,22 @@ Patch[2048]=Roland GS Var #16
 Patch[3072]=Roland GS Var #24
 Patch[4096]=Roland GS Var #32
 
-;[Roland GS Drumsets]
-;BankSelMethod=1
-;Control=Roland GS Controllers
-;NRPN=Roland GS NRPN
-;Patch[0]=Roland GS Drumsets
-;Key[*,*]=0..127
-;Key[0,0]=Roland GS Standard Set
-;Key[0,8]=Roland GS Room Set
-;Key[0,16]=Roland GS Power Set
-;Key[0,24]=Roland GS Electronic Set
-;Key[0,25]=Roland GS TR-808 Set
-;Key[0,32]=Roland GS Jazz Set
-;Key[0,40]=Roland GS Brush Set
-;Key[0,48]=Roland GS Orchestra Set
-;Key[0,56]=Roland GS SFX Set
-;Drum[*,*]=1
+[Roland GS Drums]
+BankSelMethod=1
+Control=Roland GS Controllers
+NRPN=Roland GS NRPN
+Patch[0]=Roland GS Drumsets
+Key[*,*]=0..127
+Key[0,0]=Roland GS Standard Set
+Key[0,8]=Roland GS Room Set
+Key[0,16]=Roland GS Power Set
+Key[0,24]=Roland GS Electronic Set
+Key[0,25]=Roland GS TR-808 Set
+Key[0,32]=Roland GS Jazz Set
+Key[0,40]=Roland GS Brush Set
+Key[0,48]=Roland GS Orchestra Set
+Key[0,56]=Roland GS SFX Set
+Drum[*,*]=1
 
 [Yamaha XG]
 Control=Yamaha XG Controllers
@@ -3353,34 +3353,34 @@ Key[16256,40]=XG Brush Kit
 Key[16256,48]=XG Classic Kit
 Drum[16256,*]=1
 
-;[Yamaha XG Drum Kits]
-;Control=Yamaha XG Controllers
-;Patch[896]=XG Set channel to rhythm part
-;Patch[16128]=XG SFX Kits
-;Patch[16256]=XG Drum Kits
-;Patch[*]=No Drums
-;Key[16128,0]=XG SFX 1
-;Key[16256,0]=XG Standard Kit
-;Key[*,0]=XG Standard Kit
-;Key[16128,1]=XG SFX 2
-;Key[16256,1]=XG Standard2 Kit
-;Key[*,1]=XG Standard2 Kit
-;Key[16256,8]=XG Room Kit
-;Key[*,8]=XG Room Kit
-;Key[16256,16]=XG Rock Kit
-;Key[*,16]=XG Rock Kit
-;Key[16256,24]=XG Electro Kit
-;Key[*,24]=XG Electro Kit
-;Key[16256,25]=XG Analog Kit
-;Key[*,25]=XG Analog Kit
-;Key[16256,32]=XG Jazz Kit
-;Key[*,32]=XG Jazz Kit
-;Key[16256,40]=XG Brush Kit
-;Key[*,40]=XG Brush Kit
-;Key[16256,48]=XG Classic Kit
-;Key[*,48]=XG Classic Kit
-;Drum[*,*]=1
-;Drum[*,0]=1
-;Drum[*,1]=1
-;Drum[*,8]=1
+[Yamaha XG Drums]
+Control=Yamaha XG Controllers
+Patch[896]=XG Set channel to rhythm part
+Patch[16128]=XG SFX Kits
+Patch[16256]=XG Drum Kits
+Patch[*]=No Drums
+Key[16128,0]=XG SFX 1
+Key[16256,0]=XG Standard Kit
+Key[*,0]=XG Standard Kit
+Key[16128,1]=XG SFX 2
+Key[16256,1]=XG Standard2 Kit
+Key[*,1]=XG Standard2 Kit
+Key[16256,8]=XG Room Kit
+Key[*,8]=XG Room Kit
+Key[16256,16]=XG Rock Kit
+Key[*,16]=XG Rock Kit
+Key[16256,24]=XG Electro Kit
+Key[*,24]=XG Electro Kit
+Key[16256,25]=XG Analog Kit
+Key[*,25]=XG Analog Kit
+Key[16256,32]=XG Jazz Kit
+Key[*,32]=XG Jazz Kit
+Key[16256,40]=XG Brush Kit
+Key[*,40]=XG Brush Kit
+Key[16256,48]=XG Classic Kit
+Key[*,48]=XG Classic Kit
+Drum[*,*]=1
+Drum[*,0]=1
+Drum[*,1]=1
+Drum[*,8]=1
 
